2011-10-25  Alan Modra  <amodra@gmail.com>

	Apply mainline patches
	2011-10-17  Alan Modra  <amodra@gmail.com>
	PR ld/12975
	PR ld/13195
	* elf64-ppc.c (ppc64_elf_gc_mark_dynamic_ref): Apply 2011-09-15
	and 2011-09-29 bfd_elf_gc_mark_dynamic_ref_symbol changes here too.

	2011-10-11  Alan Modra  <amodra@gmail.com>
	PR binutils/13278
	* archive.c (bfd_generic_archive_p): Only check first element
	when target_defaulted.
	(_bfd_construct_extended_name_table): Use ar_maxnamelen.
	(_bfd_archive_bsd44_construct_extended_name_table): Likewise.

	2011-10-11  Alan Modra  <amodra@gmail.com>
	PR binutils/13257
	* archive.c (_bfd_find_nested_archive, _bfd_get_elt_at_filepos): Open
	thin archive element using container target if not defaulted.

	2011-10-10  Alan Modra  <amodra@gmail.com>
	* elf64-ppc.c (ppc64_elf_howto_table): Add R_PPC64_TOCSAVE entry.
	(struct ppc_link_hash_table): Add tocsave_htab.
	(struct tocsave_entry): New.
	(tocsave_htab_hash, tocsave_htab_eq, tocsave_find): New functions.
	(ppc64_elf_link_hash_table_create): Create tocsave_htab..
	(ppc64_elf_link_hash_table_free): ..and delete it.
	(build_plt_stub): Always put STD_R2_40R1 first.
	(ppc64_elf_size_stubs): Check for R_PPC64_TOCSAVE following reloc
	on plt call.  If present add prologue nop location to tocsave_htab.
	(ppc64_elf_relocate_section): Convert prologue nop to std.  Skip
	first insn of plt call stub when R_PPC64_TOCSAVE present.

	2011-10-08  H.J. Lu  <hongjiu.lu@intel.com>
	PR ld/13250
	* elflink.c (elf_link_add_object_symbols): Preserve the maximum
	alignment and size for common symbols.

	2011-10-08  Alan Modra  <amodra@gmail.com>
	PR ld/13229
	PR ld/13244
	* elflink.c (elf_link_add_object_symbols): Don't make IR symbols
	dynamic.

	2011-10-08  Alan Modra  <amodra@gmail.com>
	* elflink.c (elf_link_output_extsym): Strip defined plugin symbols
	even when strip_discarded is false.

	2011-09-30  Alan Modra  <amodra@gmail.com>
	PR ld/13235