@@ -1,6 +1,10 @@
 2011-10-25  Alan Modra  <amodra@gmail.com>
 
 	Apply mainline patches
+	2011-10-19  Alan Modra  <amodra@gmail.com>
+	PR ld/13254
+	* elflink.c (bfd_elf_final_link): Emit error_textrel error.
+
 	2011-10-17  Alan Modra  <amodra@gmail.com>
 	PR ld/12975
 	PR ld/13195
